--- a/Semana-03/style.css
+++ b/Semana-03/style.css
@@ -1,11 +1,14 @@
 body {
   font-family: "Roboto";
+  width: 1512px;
 }
 
 header {
-  position: relative;
+  position: fixed;
+  width: 100%;
   height: 126px;
   background: #aace9b;
+  z-index: 1;
 }
 
 .header-menu img {
@@ -59,44 +62,44 @@ header {
 }
 
 nav {
-  position: absolute;
+  position: fixed;
   width: 400px;
   height: 100%;
+  font-family: "Roboto";
+  font-size: 30px;
+  line-height: 35px;
   border-right: 2px solid #bfbfbf;
+  background-color: white;
 }
 
 .nav-menu {
-  position: absolute;
+  position: relative;
   padding-left: 55px;
-  top: 80px;
+  top: 206px;
+  color: #373867;
 }
 
 .nav-menu-underline {
-  position: absolute;
+  position: relative;
   width: 100px;
   height: 0px;
-  left: 55px;
-  top: 145px;
-  border: 2px solid #aace9b;
+  margin-left: 55px;
+  top: 238px;
+  border: 1px solid #aace9b;
 }
 
 .nav,
 h2 {
-  position: relative;
-  font-family: "Roboto";
   font-weight: 700;
-  font-size: 30px;
-  line-height: 35px;
-  color: #373867;
 }
 
-.nav-ul {
+.nav-menu-ul {
   position: absolute;
   height: 420px;
-  top: 150px;
+  top: 260px;
 }
 
-.nav-ul li {
+.nav-menu-ul li {
   position: relative;
   margin: 50% 55px 40px;
   font-family: "Roboto";
@@ -104,13 +107,103 @@ h2 {
   font-size: 30px;
   line-height: 35px;
 }
-.nav-ul a {
-text-decoration: none;
-color: #373867;
+
+.nav-menu-ul a {
+  text-decoration: none;
+  color: #373867;
 }
 
-.nav-ul div {
+.nav-menu-ul div {
   position: absolute;
   width: 400px;
   border: 1px solid #bfbfbf;
+}
+
+.nav-contact-ul {
+  position: relative;
+  top: 720px;
+  margin-left: 55px;
+}
+
+.nav-contact-underline {
+  position: relative;
+  width: 100px;
+  border: 1px solid #aace9b;
+  top: 30px;
+}
+
+.nav-contact-ul li {
+  position: relative;
+  display: flex;
+  top: 60px;
+  margin-bottom: 15px;
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 29px;
+}
+
+.nav-contact-ul a {
+  padding-left: 30px;
+  text-decoration: none;
+  color: #373867;
+}
+
+#nav-contact-address {
+  margin-left: -10px;
+}
+
+#contact-address {
+  padding-left: 20px;
+}
+
+.first-section {
+  position: relative;
+  top: 126px;
+  left: 400px;
+  padding: 85px 35px 95px 30px;
+  color: #373867;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  letter-spacing: 0.3em;
+  padding-bottom: 35px;
+}
+
+.first-section h2 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  padding-bottom: 35px;
+  text-transform: uppercase;
+  color: #aace9b;
+}
+
+.first-section p {
+  width: 595px;
+  height: 60px;
+  padding-bottom: 35px;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+.first-section button {
+  width: 165px;
+  height: 70px;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 18px;
+  color: #aace9b;
+  background: #ffffff;
+  border: 3px solid #aace9b;
+  border-radius: 5px;
+}
+
+.first-section img {
+  position: absolute;
+  top: 65px;
+  right: 35px;
 }
