--- a/Semana-03/style.css
+++ b/Semana-03/style.css
@@ -234,7 +234,8 @@ h2 {
 }
 
 .features-underline,
-.why-underline {
+.why-underline,
+.info-underline {
   position: relative;
   width: 125px;
   border: 2px solid #aace9b;
@@ -340,6 +341,7 @@ h2 {
 }
 
 .why-info a {
+  margin-left: 30px;
   text-decoration: none;
   font-weight: 700;
   font-size: 24px;
@@ -358,12 +360,71 @@ h2 {
 
 .fourth-section {
   position: relative;
-  height: 500px;
+  width: 675px;
+  height: 600px;
   left: 400px;
   padding: 95px 0px 0px 40px;
 }
+.info-underline {
+  width: 360px;
+}
 
-.fourth-section div {
-  position: relative;
+input[type="text"],
+input[type="email"],
+select,
+textarea {
   display: block;
+  width: 650px;
+  padding: 10px;
+  margin: 30px 30px 30px 0px;
+  border: 2px solid #aace9b;
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  outline: none;
+}
+
+textarea {
+  height: 200px;
+}
+
+::placeholder {
+  color: #c4c4c4;
+}
+
+.fourth-section select {
+  width: 675px;
+  color: #c4c4c4;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image: url(../assets/img/select.png);
+  background-repeat: no-repeat;
+  background-position: right 15px top 50%;
+}
+
+input[type="submit"],
+input[type="reset"] {
+  position: relative;
+  width: 135px;
+  height: 50px;
+  margin-left: 20px;
+  float: right;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 18px;
+  border: 3px solid #aace9b;
+  border-radius: 5px;
+}
+
+input[type="submit"] {
+  color: #ffffff;
+  background: #aace9b;
+}
+
+input[type="reset"] {
+  color: #aace9b;
+  background: #ffffff;
 }
