--- a/Semana-03/style.css
+++ b/Semana-03/style.css
@@ -82,10 +82,10 @@ nav {
 .nav-menu-underline {
   position: relative;
   width: 100px;
-  height: 0px;
   margin-left: 55px;
   top: 238px;
-  border: 1px solid #aace9b;
+  border: 2px solid #aace9b;
+  background-color: #aace9b;
 }
 
 .nav,
@@ -235,10 +235,12 @@ h2 {
 
 .features-underline,
 .why-underline,
-.info-underline {
+.info-underline,
+.history-underline {
   position: relative;
   width: 125px;
   border: 2px solid #aace9b;
+  background-color: #aace9b;
   margin-top: 13px;
 }
 
@@ -259,7 +261,7 @@ h2 {
 
 .features-hours figure {
   margin-right: 70px;
-  padding: 30px;
+  padding: 31px;
   border: 2px solid #aace9b;
   border-radius: 5px;
 }
@@ -276,7 +278,7 @@ h2 {
 
 .features-reports figure {
   margin-right: 70px;
-  padding: 35px;
+  padding: 37px;
   border: 2px solid #aace9b;
   border-radius: 5px;
 }
@@ -293,7 +295,7 @@ h2 {
 
 .features-resource figure {
   margin-right: 70px;
-  padding: 35px;
+  padding: 34px;
   border: 2px solid #aace9b;
   border-radius: 5px;
 }
@@ -311,7 +313,7 @@ h2 {
 
 .features-role figure {
   margin-right: 70px;
-  padding: 30px;
+  padding: 31px;
   border: 2px solid #aace9b;
   border-radius: 5px;
 }
@@ -427,4 +429,41 @@ input[type="submit"] {
 input[type="reset"] {
   color: #aace9b;
   background: #ffffff;
+}
+
+.fifth-section {
+  position: relative;
+  width: 1052px;
+  height: 375px;
+  left: 400px;
+  padding: 95px 0px 0px 40px;
+}
+
+.history-underline {
+  width: 160px;
+}
+
+.fifth-section button,
+.history-img-desc {
+  display: none;
+}
+
+.history-text {
+  position: absolute;
+  width: 560px;
+  height: 290px;
+  padding-top: 34px;
+}
+
+.fifth-section p {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  display: flex;
+  align-items: center;
+}
+
+.history-img {
+  display: flex;
+  float: right;
 }
