--- a/Semana-03/style.css
+++ b/Semana-03/style.css
@@ -510,3 +510,35 @@ input[type="reset"] {
   background-color: #909090;
 }
 
+footer {
+  position: relative;
+  width: 1112px;
+  height: 280px;
+  left: 400px;
+  margin-top: 60px;
+  border-top: 3px solid #aace9b;
+}
+
+.footer-socials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1112px;
+  height: 140px;
+}
+
+.footer-socials figure {
+  width: 30px;
+  padding-left: 21px;
+}
+
+.footer-info {
+  width: 609px;
+  height: 85px;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  margin: 0 auto;
+  color: #373867;
+}
