--- a/Semana-04/why-use.css
+++ b/Semana-04/why-use.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   margin-top: 30px;
-  margin-left: 30px;
 }
 
 .third-section h2 {
   width: 133px;
   height: 16px;
+  margin-left: 30px;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -17,7 +17,7 @@
 
 .why-info {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .why-info figure {
