BaSP-W04-2022: work on header's style for tablets

--- a/Semana-04/header.css
+++ b/Semana-04/header.css
@@ -1,7 +1,6 @@
 header {
   display: flex;
   align-items: center;
-
   height: 30px;
   background: #aace9b;
 }
@@ -30,15 +29,55 @@ header {
 .header-search input {
   width: 130px;
   height: 15px;
-  font-size: 20px;
-  background: #fafbfd;
+  font-size: 10px;
+  background-color: #fafbfd;
   border-radius: 10px;
   border: none;
   outline: none;
 }
 
+
 .header-search-img {
   width: 8px;
   height: 8px;
-  filter: invert(17%) sepia(20%) saturate(1151%) hue-rotate(204deg) brightness(95%) contrast(4%)
+  filter: invert(17%) sepia(20%) saturate(1151%) hue-rotate(204deg)
+    brightness(95%) contrast(4%);
 }
+
+@media only screen and (min-width: 834px) {
+  header {
+    height: 92px;
+  }
+
+  .header-menu {
+    margin-left: 33px;
+  }
+
+  .header-menu img {
+    width: 30px;
+    height: 30px;
+  }
+
+  .header-search {
+    justify-content: flex-start;
+    width: 377px;
+    height: 36px;
+    border-radius: 50px;
+    margin-left: 173px;
+  }
+
+  .header-search input {
+    width: 330px;
+    height: 36px;
+    font-size: 15px;
+    margin-left: 5px;
+    border-radius: 50px;
+  }
+
+  .header-search img {
+    width: 20px;
+    height: 20px;
+    margin-left: 8px;
+  }
+}
+
