--- a/Semana-04/trackgenix.css
+++ b/Semana-04/trackgenix.css
@@ -1,7 +1,7 @@
 .first-section {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .first-section h1,
