--- a/Semana-04/trackgenix.css
+++ b/Semana-04/trackgenix.css
@@ -12,16 +12,12 @@
 }
 
 h1 {
-  width: 244px;
-  height: 47px;
   font-weight: 700;
   font-size: 40px;
   line-height: 47px;
 }
 
 .first-section h2 {
-  width: 265px;
-  height: 16px;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -45,4 +41,32 @@ h1 {
 
 .first-section button {
   display: none;
+}
+
+@media only screen and (min-width: 834px) {
+  .first-section {
+    margin-top: 60px;
+  }
+
+  .first-section h1 {
+    font-size: 70px;
+    line-height: 80px;
+  }
+
+  .first-section h2 {
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  .first-section img {
+    width: 225px;
+    height: 225px;
+  }
+
+  .first-section p {
+    width: 562px;
+    height: 120px;
+    font-size: 30px;
+    line-height: 35px;
+  }
 }
