--- a/Semana-04/body.css
+++ b/Semana-04/body.css
@@ -7,3 +7,10 @@ a {
     text-decoration: none;
     color: #373867;
 }
+
+@media only screen and (min-width: 1512px) {
+  
+    .container {
+        display: flex
+    }
+}
