--- a/Semana-04/header.css
+++ b/Semana-04/header.css
@@ -36,7 +36,6 @@ header {
   outline: none;
 }
 
-
 .header-search-img {
   width: 8px;
   height: 8px;
@@ -81,3 +80,12 @@ header {
   }
 }
 
+@media only screen and (min-width: 1512px) {
+  header {
+    justify-content: center;
+  }
+
+  .header-menu {
+    display: none;
+  }
+}
