--- a/Semana-04/trackgenix.css
+++ b/Semana-04/trackgenix.css
@@ -39,13 +39,15 @@ h1 {
   order: 2;
 }
 
-.first-section button {
+.first-section a {
   display: none;
 }
 
 @media only screen and (min-width: 834px) {
   .first-section {
     margin-top: 60px;
+    margin-left: 30px;
+    align-items: flex-start;
   }
 
   .first-section h1 {
@@ -68,5 +70,67 @@ h1 {
     height: 120px;
     font-size: 30px;
     line-height: 35px;
+  }
+}
+
+@media only screen and (min-width: 1512px) {
+  .first-section {
+    flex-wrap: wrap;
+    height: 550px;
+    margin-top: 65px;
+  }
+
+  .first-section h1,
+  .first-section h2,
+  .first-section p,
+  .first-section button {
+    padding-bottom: 35px;
+  }
+
+  .first-section h1 {
+    font-size: 48px;
+    line-height: 56px;
+    letter-spacing: 0.3em;
+  }
+
+  .first-section h2 {
+    font-size: 24px;
+    line-height: 28px;
+    text-transform: uppercase;
+  }
+
+  .first-section img {
+    width: 460px;
+    height: 450px;
+  }
+
+  .first-section p {
+    width: 617px;
+    height: 62px;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: start;
+    order: 0;
+  }
+
+  .first-section figure {
+    align-self: flex-end;
+  }
+
+  .first-section a {
+    display: flex;
+  }
+
+  .first-section button {
+    width: 165px;
+    height: 70px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 18px;
+    color: #aace9b;
+    background: #ffffff;
+    border: 3px solid #aace9b;
+    border-radius: 5px;
+    padding: 1px;
   }
 }
