BaSP-W04-2022: work on pruducts and footer style for desktop

--- a/Semana-04/products.css
+++ b/Semana-04/products.css
@@ -61,3 +61,10 @@
     line-height: 28px;
   }  
 }
+
+
+@media only screen and (min-width: 1512px) {
+  .sixth-section {
+    margin-top: 165px;
+  }
+}
