--- a/Semana-04/footer.css
+++ b/Semana-04/footer.css
@@ -74,3 +74,10 @@ footer {
     line-height: 28px;
   }
 }
+
+@media only screen and (min-width: 1512px) {
+  footer {
+    width: 1112px;
+    margin-top: 95px;
+  }
+}
