--- a/Semana-04/css/trackgenix.css
+++ b/Semana-04/css/trackgenix.css
@@ -1,132 +1,126 @@
-.first-section {
+.trackgenix {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: auto;
 }
 
-.first-section h1,
-.first-section h2,
-.first-section p,
-.first-section img {
+.trackgenix h1,
+.trackgenix h2,
+.trackgenix p,
+.trackgenix img {
   margin-top: 5px;
 }
 
 h1 {
   font-weight: 700;
-  font-size: 40px;
-  line-height: 47px;
+  font-size: 2.5rem;
+  line-height: 3rem;
+  text-transform: uppercase;
 }
 
-.first-section h2 {
+.trackgenix h2 {
   font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 0.875rem;
+  line-height: 1rem;
   color: #aace9b;
 }
 
-.first-section img {
-  width: 155px;
-  height: 144px;
+.trackgenix img {
+  width: 40vw;
 }
 
-.first-section p {
-  width: 283px;
-  height: 42px;
+.trackgenix p {
+  width: 68.35vw;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
   text-align: center;
   order: 2;
 }
 
-.first-section a {
+.trackgenix a {
   display: none;
 }
 
 @media only screen and (min-width: 834px) {
-  .first-section {
+  .trackgenix {
     margin-top: 60px;
-    margin-left: 30px;
   }
 
-  .first-section h1 {
-    font-size: 70px;
-    line-height: 80px;
+  .trackgenix h1 {
+    font-size: 4.375rem;
+    line-height: 5rem;
   }
 
-  .first-section h2 {
-    font-size: 20px;
-    line-height: 25px;
+  .trackgenix h2 {
+    font-size: 1.25rem;
+    line-height: 1.5625rem;
   }
 
-  .first-section img {
-    width: 225px;
-    height: 225px;
+  .trackgenix img {
+    width: 27vw;
   }
 
-  .first-section p {
-    width: 562px;
-    height: 120px;
-    font-size: 30px;
-    line-height: 35px;
+  .trackgenix p {
+    width: 67.4vw;
+    font-size: 1.875rem;
+    line-height: 2.187rem;
   }
 }
 
 @media only screen and (min-width: 1512px) {
-  .first-section {
+  .trackgenix {
     flex-wrap: wrap;
     height: 550px;
     align-items: flex-start;
-    margin-top: 65px;
   }
 
-  .first-section h1,
-  .first-section h2,
-  .first-section p,
-  .first-section button {
+  .trackgenix h1,
+  .trackgenix h2,
+  .trackgenix p,
+  .trackgenix button {
     padding-bottom: 35px;
   }
 
-  .first-section h1 {
-    font-size: 48px;
-    line-height: 56px;
+  .trackgenix h1 {
+    font-size: 3rem;
+    line-height: 3.5rem;
     letter-spacing: 0.3em;
   }
 
-  .first-section h2 {
-    font-size: 24px;
-    line-height: 28px;
+  .trackgenix h2 {
+    font-size: 1.5rem;
+    line-height: 1.75;
     text-transform: uppercase;
   }
 
-  .first-section img {
-    width: 460px;
-    height: 450px;
+  .trackgenix img {
+    width: 30.4vw;
   }
 
-  .first-section p {
-    width: 617px;
-    height: 62px;
-    font-size: 24px;
-    line-height: 28px;
+  .trackgenix p {
+    width: 40.8vw;
+    font-size: 1.5rem;
+    line-height: 1.75rem;
     text-align: start;
     order: 0;
   }
 
-  .first-section figure {
+  .trackgenix figure {
     align-self: flex-end;
   }
 
-  .first-section a {
+  .trackgenix a {
     display: flex;
   }
 
-  .first-section button {
-    width: 165px;
+  .trackgenix button {
+    width: 11vw;
     height: 70px;
     font-weight: 500;
-    font-size: 15px;
-    line-height: 18px;
+    font-size: o.9rem;
+    line-height: 1.125rem;
     color: #aace9b;
     background: #ffffff;
     border: 3px solid #aace9b;
