--- a/Semana-04/css/our-history.css
+++ b/Semana-04/css/our-history.css
@@ -1,106 +1,94 @@
-.fifth-section {
+.our-history {
   display: flex;
   flex-direction: column;
   margin-top: 30px;
   margin-left: 30px;
 }
 
-.fifth-section h2 {
-  width: 70px;
-  height: 15px;
+.our-history h2 {
+  width: fit-content;
   font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 0.875rem;
+  line-height: 1rem;
   padding-bottom: 5px;
   border-bottom: 2px solid #aace9b;
 }
 
-.fifth-section-group {
+.our-history-group {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .paragraph {
-  width: 331px;
+  width: 80vw;
   margin-top: 20px;
 }
 
-.fifth-section p {
+.our-history p {
   font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
-  text-align: center;
-}
-.fifth-section p:nth-child(3) {
-  display: none;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
+  text-align: justify;
 }
 
-.fifth-section figure {
+.our-history figure {
   align-self: center;
 }
 
-.fifth-section div img {
-  width: 180px;
-  height: 80px;
+.our-history div img {
+  width: 43.5vw;
   margin-top: 20px;
 }
 
 @media only screen and (min-width: 834px) {
-  .fifth-section {
+  .our-history {
     margin-top: 60px;
   }
 
-  .fifth-section h2 {
-    width: 160px;
-    height: 35px;
-    font-size: 32px;
-    line-height: 38px;
+  .our-history h2 {
+    font-size: 2rem;
+    line-height: 2.375rem;
     padding-bottom: 15px;
   }
 
   .paragraph {
-    width: 742px;
-    height: 170px;
+    width: 89vw;
     margin-top: 30px;
   }
 
-  .fifth-section p {
-    font-size: 24px;
-    line-height: 28px;
+  .our-history p {
+    font-size: 1.5rem;
+    line-height: 1.75rem;
     text-align: center;
   }
 
-  .fifth-section p:nth-child(3) {
+  .our-history p:nth-child(3) {
     display: none;
   }
 
-  .fifth-section div img {
-    width: 320px;
-    height: 145px;
+  .our-history div img {
+    width: 38.5vw;
     margin-top: 25px;
   }
 }
 
 @media only screen and (min-width: 1512px) {
-  .fifth-section div img {
-    width: 455px;
-    height: 255px;
+  .our-history div img {
+    width: 31vw;
   }
 
-  .fifth-section-group {
+  .our-history-group {
     flex-direction: row;
     align-items: flex-start;
-    height: 300px;
   }
 
   .paragraph {
     flex-direction: column;
-    width: 550px;
+    width: 36.3vw;
   }
 
-  .fifth-section p {
+  .our-history p {
     text-align: start;
-    width: 560px;
   }
 }
