--- a/Semana-04/css/footer.css
+++ b/Semana-04/css/footer.css
@@ -17,19 +17,16 @@ footer {
 
 .twitter,
 .face {
-  width: 13px;
-  height: 12px;
+  width: 3.1vw;
 }
 
 .linkedin,
 .instagram {
-  width: 16px;
-  height: 15px;
+  width: 3.9vw;
 }
 
 .github {
-  width: 20px;
-  height: 19px;
+  width: 4.8vw;
 }
 
 .footer-info {
@@ -38,8 +35,8 @@ footer {
   align-items: center;
   padding-bottom: 10px;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
 }
 
 
@@ -54,30 +51,41 @@ footer {
   
   .twitter,
   .face {
-    width: 40px;
-    height: 40px;
+    width: 4.8vw;
   }
   
   .linkedin,
   .instagram {
-    width: 45px;
-    height: 45px;
+    width: 5.4vw;
   }
   
   .github {
-    width: 55px;
-    height: 55px;
+    width: 6.6vw;
   }
   
   .footer-info {
-    font-size: 24px;
-    line-height: 28px;
+    font-size: 1.5rem;
+    line-height: 1.75rem;
   }
 }
 
 @media only screen and (min-width: 1512px) {
   footer {
-    width: 1112px;
+    width: 73.5vw;
     margin-top: 95px;
+  }
+
+  .twitter,
+  .face {
+    width: 2vw;
+  }
+  
+  .linkedin,
+  .instagram {
+    width: 2.5vw;
+  }
+  
+  .github {
+    width: 3.2vw;
   }
 }
