--- a/Semana-04/css/trackgenix.css
+++ b/Semana-04/css/trackgenix.css
@@ -12,7 +12,7 @@
   margin-top: 5px;
 }
 
-h1 {
+.trackgenix h1 {
   font-weight: 700;
   font-size: 2.5rem;
   line-height: 3rem;
@@ -97,6 +97,7 @@ h1 {
 
   .trackgenix img {
     width: 30.4vw;
+    margin-right: 35px;
   }
 
   .trackgenix p {
