--- a/Semana-04/css/why-use.css
+++ b/Semana-04/css/why-use.css
@@ -76,3 +76,13 @@
     padding-top: 25px;
   }
 }
+
+@media only screen and (min-width: 1512px) {
+.why-info {
+  justify-content: flex-start;
+}
+
+.why-info ul {
+  margin-left: 100px;
+}
+}
