--- a/Semana-04/css/features.css
+++ b/Semana-04/css/features.css
@@ -81,3 +81,15 @@
     line-height: 1.75rem;
   }
 }
+
+@media only screen and (min-width: 1512px) {
+ .features-blocks {
+  justify-content: flex-start;
+  width: 85%;
+ }
+ 
+  .features-blocks img {
+    width: 2vw;
+    padding: 2vw;
+  }
+}
